--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BlogApp"
+        android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <activity
-            android:name=".HomeActivity"
+            android:name=".AddPost"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity
-            android:name=".UserInfo"
-            android:label="User Info"
-            android:exported="false">
+        <activity android:name=".HomeActivity">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity android:name=".UserInfo">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -34,7 +36,6 @@
         <activity
             android:name=".AuthActivity"
             android:exported="true"
-            android:label="Authentication Checkpoint"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
